--- a/dev/html/culturetv/mainList.pug
+++ b/dev/html/culturetv/mainList.pug
@@ -968,11 +968,11 @@ block append script
             loopFillGroupWithBlank : true,
             watchOverflow:true,
             navigation: {
-                nextEl: '.swiper-button-area .swiper-button-next',
-                prevEl: '.swiper-button-area .swiper-button-prev',
+                nextEl: '.thumbnail-area  .swiper-button-next',
+                prevEl: '.thumbnail-area  .swiper-button-prev',
             },
             pagination: {
-                el: '.swiper-button-area .swiper-pagination',
+                el: '.thumbnail-area .swiper-pagination',
                 type: 'fraction',
             },
             a11y : {
