--- a/dev/html/culturetv/videoList.pug
+++ b/dev/html/culturetv/videoList.pug
@@ -33,55 +33,95 @@ block contents
                                 span.txt 문화포털의 크리에이터 문화PD의 영상을 소개합니다.
 
                         .visual-area.type-col.type-slider
-                            .swiper-wrapper
-                                .item.swiper-slide
-                                    .visual-content-box
-                                        .video
-                                            a.link-content-list(href="#" title="")
-                                                img.link-img(src="../../images/link_img_sample.jpg", alt="")
-                                                i.ico-play(aria-hidden="true") 
-                                    .visual-text-box
-                                        ul.visual-category
-                                            li
-                                                span.txt 문화예술
-                                            li
-                                                span.txt 서울
-                                        h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
-                                        p.sub-txt.ellipsis.type04 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
-                                        ul.hashtag
-                                            li
-                                                span.txt # 국립국악원
-                                            li
-                                                span.txt # 국립박물관
-                                            li
-                                                span.txt # 국립아카이브
-                                            li
-                                                span.txt # 이색전시회
-                                            li
-                                                span.txt # 서초구이색놀거리
-                                        dl.info
-                                            dt 제작
-                                            dd 정육현
-                                        dl.info
-                                            dt 등록일
-                                            dd 2022-09-22
-                section.search-result
+                            .swiper-container
+                                .swiper-wrapper
+                                    .item.swiper-slide
+                                        .visual-content-box
+                                            .video
+                                                a.link-content-list(href="#" title="")
+                                                    img.link-img(src="https://picsum.photos/840/472", alt="")
+                                                    i.ico-play(aria-hidden="true") 
+                                        .visual-text-box
+                                            ul.visual-category
+                                                li
+                                                    span.txt 문화예술
+                                                li
+                                                    span.txt 서울
+                                            h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                            p.sub-txt.ellipsis.type04 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                                            ul.hashtag
+                                                li
+                                                    span.txt # 국립국악원
+                                                li
+                                                    span.txt # 국립박물관
+                                                li
+                                                    span.txt # 국립아카이브
+                                                li
+                                                    span.txt # 이색전시회
+                                                li
+                                                    span.txt # 서초구이색놀거리
+                                            dl.info
+                                                dt 제작
+                                                dd 정육현
+                                            dl.info
+                                                dt 등록일
+                                                dd 2022-09-22
+                                    .item.swiper-slide
+                                        .visual-content-box
+                                            .video
+                                                a.link-content-list(href="#" title="")
+                                                    img.link-img(src="https://picsum.photos/840/471", alt="")
+                                                    i.ico-play(aria-hidden="true") 
+                                        .visual-text-box
+                                            ul.visual-category
+                                                li
+                                                    span.txt 문화예술
+                                                li
+                                                    span.txt 서울
+                                            h3.title-h3 22[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                            p.sub-txt.ellipsis.type04 22[기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                                            ul.hashtag
+                                                li
+                                                    span.txt # 국립국악원
+                                                li
+                                                    span.txt # 국립박물관
+                                                li
+                                                    span.txt # 국립아카이브
+                                                li
+                                                    span.txt # 이색전시회
+                                                li
+                                                    span.txt # 서초구이색놀거리
+                                            dl.info
+                                                dt 제작
+                                                dd 정육현
+                                            dl.info
+                                                dt 등록일
+                                                dd 2022-09-22
+                                .swiper-button-area
+                                    .swiper-button-prev
+                                    .swiper-button-next 
+                                    .swiper-pagination
+
+                section.section-list
                     .section-inner
-                        .tab-util
+                        .area-util
                             .txt-total 총 <strong>3131</strong>건
                             .list-search
-                                select(name="장르") 
-                                    option(value="") 전체
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
-                                select(name="") 
-                                    option(value="") 지역
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
-                                select(name="") 
-                                    option(value="") 7거리
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
+                                .form-box
+                                    select(name="장르") 
+                                        option(value="") 전체
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
+                                .form-box
+                                    select(name="") 
+                                        option(value="") 지역
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
+                                .form-box
+                                    select(name="") 
+                                        option(value="") 7거리
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
                                 .search-input
                                     input(type="text" placeholder="검색어를 입력하세요.")
                                     button(type="button").btn-search
@@ -157,5 +197,161 @@ block contents
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
                                             p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            
+                        .area-pagenation
+                            button.btn-first(type="button")
+                                span.hide-txt 맨 앞으로
+                            button.btn-prev(type="button")
+                                span.hide-txt 앞으로
+                            .wrap-number
+                                button.btn-num.on(type="button")
+                                    span.txt 1
+                                button.btn-num(type="button")
+                                    span.txt 2
+                                button.btn-num(type="button")
+                                    span.txt 3
+                                button.btn-num(type="button")
+                                    span.txt 4
+                                button.btn-num(type="button")
+                                    span.txt 5
+                                button.btn-num(type="button")
+                                    span.txt 6
+                                button.btn-num(type="button")
+                                    span.txt 7
+                                button.btn-num(type="button")
+                                    span.txt 8
+                                button.btn-num(type="button")
+                                    span.txt 9
+                                button.btn-num(type="button")
+                                    span.txt 10
+                            button.btn-next(type="button")
+                                span.hide-txt 뒤로
+                            button.btn-last(type="button")
+                                span.hide-txt 맨뒤로
 
+block append script
+    script.
+        // UI 확인용 Swiper
 
+        //문화영상
+        let swiper =  new Swiper('.type-slider .swiper-container', {
+            slidesPerView: 1,
+            spaceBetween:16,
+            spaceBetween:16,
+            loopFillGroupWithBlank : true,
+            watchOverflow:true,
+            effect: "fade",
+            fadeEffect: {
+                crossFade: true
+            },
+            speed:600,
+            navigation: {
+                nextEl: '.type-slider .swiper-button-area .swiper-button-next',
+                prevEl: '.type-slider .swiper-button-area .swiper-button-prev',
+            },
+            pagination: {
+                el: '.type-slider .swiper-button-area .swiper-pagination',
+                type: 'fraction',
+            },
+            a11y : {
+                enabeld: true
+            }
+        });
