--- a/dev/css_partials/kya.scss
+++ b/dev/css_partials/kya.scss
@@ -189,6 +189,10 @@
         }
     }
 
+    .box-thumb .btn-link .txt {
+        font-size: 16px;
+    }
+
     .box-txt {
         margin-top: 8px;
 
