--- a/dev/html/home/index.pug
+++ b/dev/html/home/index.pug
@@ -69,7 +69,7 @@ block contents
                                                         i.ico-housein
                                                             span.hide-txt 집콕
                                                     .btn-link
-                                                        span.txt 16px 폰트크기 수정 하기
+                                                        span.txt 예매 바로가기
                                                 ul.thumb-tag
                                                     li.tag
                                                         span.txt 공연/전시
