--- a/dev/_codinglist/_cl01.pug
+++ b/dev/_codinglist/_cl01.pug
@@ -47,7 +47,7 @@
             "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
-            "DI-11100", /* 5. page(ID) */
+            "", /* 5. page(ID) */
             "home/index.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
@@ -61,8 +61,22 @@
             "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
-            "DI-11200", /* 5. page(ID) */
+            "", /* 5. page(ID) */
             "oneeye/oneEyeList.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ],
+        [
+            "", /* 0. 뎁스1 */
+            "", /* 1. 뎁스2 */
+            "상세페이지", /* 2. 뎁스3 */
+            "", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "oneeye/oneEyeView.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
             [
@@ -75,7 +89,7 @@
             "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
-            "DI-11300", /* 5. page(ID) */
+            "", /* 5. page(ID) */
             "perform/relayList.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
@@ -89,7 +103,7 @@
             "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
-            "DI-11500", /* 5. page(ID) */
+            "", /* 5. page(ID) */
             "space/facility.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
