--- a/dev/css_partials/kya.scss
+++ b/dev/css_partials/kya.scss
@@ -1,6 +1,98 @@
 @charset "utf-8";
 
 // 공통
+.mont {
+    font-family: Montserrat;
+}
+
+.area-table {
+    table {
+        width: 100%;
+        border-top: 2px solid #222;
+    }
+
+    thead {
+        width: 100%;
+        background: #f5f5f5;
+    }
+
+    th {
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 1.25;
+        padding: 16px 10px;
+        text-align: center;
+    }
+
+    td {
+        border-bottom: 1px solid #ddd;
+        text-align: center;
+        font-size: 16px;
+        letter-spacing: -0.4px;
+        padding: 13px 50px;
+        height: 56px;
+    }
+
+    .align-left {
+        text-align: left;
+    }
+
+    .link-more {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #ddd;
+        padding: 0 10px;
+        height: 30px;
+
+        .txt {
+            font-size: 12px;
+            line-height: 1;
+
+        }
+    }
+}
+
+.area-tab-button {
+    display: flex;
+    border-top: 2px solid #222;
+    
+    .tab-btn {
+        flex: 1;
+        background: #f5f5f5;
+        border-left: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        padding: 18px;
+
+        .txt {
+            font-size: 18px;
+            color: #222;
+        }
+
+        &:last-child{
+            border-right: 1px solid #ddd;
+        }
+
+        &.on {
+            background: #fff;
+            border-bottom: 0;
+            
+            .txt {
+                font-weight: bold;
+            }
+        }
+    }
+}
+
+.area-tab-info {
+    display: none;
+
+    &.on {
+        display: block;
+        
+    }
+}
+
 .area-util {
 
     .align-box {
@@ -683,6 +775,151 @@
     }
 }
 
+.section-view {
+    margin: 80px 0 52px;
+
+    .area-thumb-view {
+        display: flex;
+    }
+
+    .img-view {
+        width: 290px;
+
+        img {
+            display: block;
+            width: 100%;
+        }
+    }
+
+    .wrap-info {
+        height: calc(100% - 48px);
+    }
+
+    .info-view  {
+        margin-left: 40px;
+        flex: 1;
+    }
+
+    .view-tit {
+        font-size: 28px;
+        font-weight: bold;
+        margin: 16px 0;
+        line-height: 1.29;
+    }
+
+    .view-btn {
+        display: flex;
+        justify-content: flex-end;
+
+        .btn-link, .btn-home {
+            display: flex;
+             align-items: center;
+            height: 48px;
+            padding: 0 64px;
+        }
+    }
+
+    .btn-link {
+        background: #222;
+        margin-right: 16px;
+    
+        .txt {
+            color: #fff;
+            font-size: 16px;
+        }
+    }
+
+    .btn-home {
+        border: 1px solid #ddd;
+        .txt {
+            color: #222;
+            font-size: 16px;
+        }
+    }
+
+    .view-list {
+        .list {
+            display: flex;
+            line-height: 1.25
+            ;
+
+
+            &+.list {
+                margin-top: 12px;
+            }
+        }
+        .head {
+            width: 120px;
+            font-size: 14px;
+            font-weight: bold;
+            letter-spacing: -0.3px;
+        }
+        .desc {
+            font-size: 14px;
+            letter-spacing: -0.3px;
+            font-family: Montserrat;
+        }
+    }
+
+    
+}
+
+.section-view-cont {
+    padding-bottom: 120px;
+
+    .area-tab-info {
+        padding-top: 52px;
+    }
+
+    .area-pagenation {
+        margin-top: 52px;
+    }
+
+    .txt-wrap {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 53px;
+
+        .align-txt {
+            width: 50%;
+        }
+
+        .list {
+            display: flex;
+
+            & + .list {
+                margin-top: 12px;
+            }
+        }
+
+        .txt-head {
+            width: 110px;
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: -0.4px;
+        }
+        .txt-desc {
+            width: calc(100% - 110px);
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: -0.4px;
+        }
+
+        .btn-link {
+            color: #328fe1;
+            text-decoration: underline;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: -0.4px;
+            word-break: break-all;
+        }
+    }
+
+    
+}
+
+
 // 문화릴레이 티켓
 .section-ticket {
     .wrap-ticket {
@@ -764,48 +1001,6 @@
 .wrap-ticket-info {
     margin-top: 52px;
     border-bottom: 1px solid #ddd;
-    
-
-    .tab-button {
-        display: flex;
-        border-top: 2px solid #222;
-        
-
-        .tab-btn {
-            flex: 1;
-            background: #f5f5f5;
-            border-left: 1px solid #ddd;
-            border-bottom: 1px solid #ddd;
-            padding: 18px;
-
-            .txt {
-                font-size: 18px;
-                color: #222;
-            }
-
-            &:last-child{
-                border-right: 1px solid #ddd;
-            }
-
-            &.on {
-                background: #fff;
-                border-bottom: 0;
-                
-                .txt {
-                    font-weight: bold;
-                }
-            }
-        }
-    }
-
-    .tab-info {
-        display: none;
-
-        &.on {
-            display: block;
-            
-        }
-    }
 
     .info-list {
         display: flex;
@@ -1251,6 +1446,52 @@
 
     .wrap-ticket-info .info-table .txt-body.type-flex {
         display: block;
+    }
+
+
+    .section-view {
+        margin-top: 40px;
+    }
+    .section-view .area-thumb-view {
+        display: block;
+    }
+    .section-view .img-view {
+        max-width: 400px;
+        width: 100%;
+        // margin: 0 auto;
+    }
+    .section-view .info-view{
+        // max-width: 500px;
+        width: 100%;
+        margin: 40px auto;
+    }
+    .section-view .view-btn {
+        width: 100%;
+        margin-top: 30px;
+    }
+    .section-view .view-btn .btn-link,
+    .section-view .view-btn .btn-home {
+        // height: 40px;
+        // padding: 0 40px;
+        flex: 1;
+        justify-content: center;
+        padding: 0;
+    }
+    .section-view-cont .txt-wrap {
+        display: block;
+    }
+    .section-view-cont .txt-wrap .align-txt {
+        width: 100%;
+    }
+    .section-view-cont .txt-wrap .align-txt + .align-txt {
+        margin-top: 12px;
+    }
+
+    .area-tab-button .tab-btn {
+        padding: 16px 10px;
+    }
+    .area-tab-button .tab-btn .txt {
+        font-size: 16px;
     }
 
     
