--- a/dev/css_partials/kya.scss
+++ b/dev/css_partials/kya.scss
@@ -1419,7 +1419,7 @@
 
     .wrap-ticket-info .info-table {
         flex-wrap: wrap;
-        padding: 20px;
+        padding: 20px 0;
     
         .txt-head {
             width: 100%;
