--- a/dev/html/perform/relayList.pug
+++ b/dev/html/perform/relayList.pug
@@ -70,7 +70,7 @@ block contents
                                             em.txt-num 03
                                             p.tit 전자스탬프 적립 확인
                                             p.txt 나의 문화릴레이 티켓에서 전자 스탬프를 확인하세요.
-                            .tab-info
+                            .area-tab-info
                                 .info-table
                                     p.txt-head 이용안내
                                     .txt-body
