--- a/dev/_codinglist/_cl02.pug
+++ b/dev/_codinglist/_cl02.pug
@@ -72,6 +72,20 @@
         [
             "", /* 0. 뎁스1 */
             "", /* 1. 뎁스2 */
+            "", /* 2. 뎁스3 */
+            "상세", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "culturetv/videoListDetail.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ],
+        [
+            "", /* 0. 뎁스1 */
+            "", /* 1. 뎁스2 */
             "한국문화100", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
