테이블 프로토타입

--- a/dev/html/space/facility.pug
+++ b/dev/html/space/facility.pug
@@ -30,6 +30,8 @@ block contents
                                 span.txt 지역별 다양한 문화관련 시설들을 공유합니다.
 
                 section.section-map
+                    .section-inner
+                        
 
 block append script
     script.    
