--- a/dev/css_partials/kya.scss
+++ b/dev/css_partials/kya.scss
@@ -5,54 +5,6 @@
     font-family: Montserrat;
 }
 
-.area-table {
-    table {
-        width: 100%;
-        border-top: 2px solid #222;
-    }
-
-    thead {
-        width: 100%;
-        background: #f5f5f5;
-    }
-
-    th {
-        font-size: 16px;
-        font-weight: bold;
-        line-height: 1.25;
-        padding: 16px 10px;
-        text-align: center;
-    }
-
-    td {
-        border-bottom: 1px solid #ddd;
-        text-align: center;
-        font-size: 16px;
-        letter-spacing: -0.4px;
-        padding: 13px 50px;
-        height: 56px;
-    }
-
-    .align-left {
-        text-align: left;
-    }
-
-    .link-more {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid #ddd;
-        padding: 0 10px;
-        height: 30px;
-
-        .txt {
-            font-size: 12px;
-            line-height: 1;
-
-        }
-    }
-}
-
 .area-tab-button {
     display: flex;
     border-top: 2px solid #222;
@@ -1121,6 +1073,9 @@
     }
 }
 
+// 지도
+
+
 
 // .type-home {
 //     &.slide-contents .thumb-img {
@@ -1476,6 +1431,10 @@
         flex: 1;
         justify-content: center;
         padding: 0;
+
+        .txt {
+            font-size: 14px;
+        }
     }
     .section-view-cont .txt-wrap {
         display: block;
@@ -1491,7 +1450,18 @@
         padding: 16px 10px;
     }
     .area-tab-button .tab-btn .txt {
-        font-size: 16px;
+        font-size: 15px;
+    }
+    .section-view-cont .txt-wrap .txt-head {
+        font-size: 14px;
+        width: 90px;
+    }
+    .section-view-cont .txt-wrap .txt-desc {
+        font-size: 14px;
+    }
+
+    .section-view-cont .area-tab-info {
+        padding-top: 40px;
     }
 
     
