--- a/dev/html/oneeye/oneEyeView.pug
+++ b/dev/html/oneeye/oneEyeView.pug
@@ -136,6 +136,7 @@ block contents
                                     span.hide-txt 맨뒤로
 
                         .area-tab-info
+                            // 모바일 디자인에 따라 type01,02 로 분류
                             .area-table.type02
                                 table
                                     caption 위치
@@ -211,6 +212,7 @@ block contents
                                     span.hide-txt 맨뒤로
 
                         .area-tab-info
+                            // 모바일 디자인에 따라 type01,02 로 분류
                             .area-table.type01
                                 table
                                     caption 주변관광지
